<resources>
    <string name="app_name">UniFavors</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="your_email">Your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="log_in_instead">I already have an account</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New here? Register</string>
    <string name="add_favor">Add a favor</string>
    <string name="pide_tu_favor">Ask for a favor</string>
    <string name="un_titulo_para_tu_favor">Title for your favor</string>
    <string name="descripcion">Description</string>
    <string name="pedir_favor">Request favor</string>
    <string name="favor_pedido_por">Favor requested for:</string>
    <string name="realizar_favor">Do this favor</string>
    <string name="type_a_message">Message…</string>
    <string name="send_message_button">Send message button</string>
    <string name="unifavores">UniFavors</string>
    <string name="lugar_de_entrega">Delivery place</string>
    <string name="titulo">Title</string>
    <string name="no_favors_yet">No favors to do yet, come back later :)</string>
    <string name="no_favor_selected">You haven\'t selected any favor to do yet :(</string>
    <string name="favors_to_complete">Favors you promised to complete. Tap one to see more options:</string>
    <string name="change_picture">Change picture</string>
    <string name="score_label">Score:</string>
    <string name="sign_out_label">Logout </string>
    <string name="best_users">Users with a greater spirit of solidarity:</string>
    <string name="inicio">Home</string>
    <string name="perfil">Profile</string>
    <string name="favores_sin_completar">Incomplete favors</string>
    <string name="estadisticas">Statistics</string>
    <string name="current_chats">Active chats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mis_favores">My favors</string>
    <string name="no_favor_yet">You haven\'t requested any favor yet :)</string>
    <string name="estado">STATUS:</string>
    <string name="no_messages_yet">No messages yet, say hi!</string>
    <string name="chats_with_volunteers_label">Here will appear chats with the ones you\'re making or are making you any favor</string>
    <string name="ask_for_a_favor">Ask for a favor</string>
    <string name="launch_activity_text">This app consists of 2 apps (so much recursion!). The first one is a game and the second is a place where you can ask and request favors (great in a campus, e.g).</string>


    <!-- Memory Games string -->
    <string name="grid_1">Grid 1</string>
    <string name="grid_2">Grid 2</string>
    <string name="grid_3">Grid 3</string>
    <string name="grid_4">Grid 4</string>
    <string name="grid_5">Grid 5</string>
    <string name="grid_6">Grid 6</string>
    <string name="grid_7">Grid 7</string>
    <string name="grid_8">Grid 8</string>
    <string name="grid_9">Grid 9</string>
    <string name="grid_12">Grid 12</string>
    <string name="grid_11">Grid 11</string>
    <string name="grid_10">Grid 10</string>
    <string name="timer_text">Timer</string>
    <string name="current_score">Score</string>
    <string name="highest_score">Best score</string>
    <string name="restart_score">200</string>
    <string name="global_score">Global score</string>
    <string name="memory_game_button">Memory Game</string>
    <string name="sequence_game_button">Sequence Game</string>
    <string name="number_of_squares">Tapped squares:</string>
    <string name="play_button">Play button</string>
    <string name="share_text">Hey! My global score in \'Memory Games\' is %1$s\nMemory Game: %2$s\nSequence Game: %3$s\n\nTry to beat my score and show me ;)</string>
    <string name="clear_memory_game_score">Clear Memory Game score</string>
    <string name="clear_sequence_game_score">Clear Sequence Game score</string>
    <string name="clear_all_scores">Clear all scores</string>
    <string name="brain_image">Brain image</string>

</resources>