<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".memoryGame.MemoryFragment">

    <data>

        <variable
            name="score"
            type="com.cagudeloa.memorygame.Score" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/main_button"
                android:layout_width="55dp"
                android:layout_height="54dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/play_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/timer_text"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/play" />

            <TextView
                android:id="@+id/score_label_text"
                style="@style/labels"
                android:layout_marginTop="8dp"
                android:text="@string/current_score"
                app:layout_constraintEnd_toStartOf="@+id/highest_label_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/highest_label_text"
                style="@style/labels"
                android:layout_marginTop="8dp"
                android:text="@string/highest_score"
                app:layout_constraintEnd_toStartOf="@+id/timer_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/score_label_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/score_text"
                style="@style/numbers"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@={score.currentScore}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/score_label_text"
                app:layout_constraintStart_toStartOf="@+id/score_label_text"
                app:layout_constraintTop_toBottomOf="@+id/score_label_text" />

            <TextView
                android:id="@+id/highest_score_text"
                style="@style/numbers"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@={score.highestScore}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/highest_label_text"
                app:layout_constraintStart_toStartOf="@+id/highest_label_text"
                app:layout_constraintTop_toBottomOf="@+id/highest_label_text" />

            <TextView
                android:id="@+id/timer_text"
                style="@style/labels"
                android:layout_marginTop="8dp"
                android:text="@string/timer_text"
                app:layout_constraintEnd_toStartOf="@+id/main_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/highest_label_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/count_down_text"
                style="@style/numbers"
                app:layout_constraintEnd_toEndOf="@+id/timer_text"
                app:layout_constraintStart_toStartOf="@+id/timer_text"
                app:layout_constraintTop_toBottomOf="@+id/timer_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#46F1F1F1">

            <ImageView
                android:id="@+id/image1"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/grid_1"
                app:layout_constraintBottom_toTopOf="@+id/image4"
                app:layout_constraintEnd_toStartOf="@+id/image2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image2"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/grid_2"
                app:layout_constraintBottom_toTopOf="@+id/image5"
                app:layout_constraintEnd_toStartOf="@+id/image3"
                app:layout_constraintStart_toEndOf="@+id/image1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image3"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/grid_3"
                app:layout_constraintBottom_toTopOf="@+id/image6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image4"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/grid_4"
                app:layout_constraintBottom_toTopOf="@+id/image7"
                app:layout_constraintEnd_toStartOf="@+id/image5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image1"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image5"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/grid_5"
                app:layout_constraintBottom_toTopOf="@+id/image8"
                app:layout_constraintEnd_toStartOf="@+id/image6"
                app:layout_constraintStart_toEndOf="@+id/image4"
                app:layout_constraintTop_toBottomOf="@+id/image2"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image6"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/grid_6"
                app:layout_constraintBottom_toTopOf="@+id/image9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image5"
                app:layout_constraintTop_toBottomOf="@+id/image3"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image7"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/grid_7"
                app:layout_constraintBottom_toTopOf="@+id/image10"
                app:layout_constraintEnd_toStartOf="@+id/image8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image4"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image8"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/grid_8"
                app:layout_constraintBottom_toTopOf="@+id/image11"
                app:layout_constraintEnd_toStartOf="@+id/image9"
                app:layout_constraintStart_toEndOf="@+id/image7"
                app:layout_constraintTop_toBottomOf="@+id/image5"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image9"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/grid_9"
                app:layout_constraintBottom_toTopOf="@+id/image12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image8"
                app:layout_constraintTop_toBottomOf="@+id/image6"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image10"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/grid_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image7"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image11"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/grid_11"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image12"
                app:layout_constraintStart_toEndOf="@+id/image10"
                app:layout_constraintTop_toBottomOf="@+id/image8"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />

            <ImageView
                android:id="@+id/image12"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/grid_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image11"
                app:layout_constraintTop_toBottomOf="@+id/image9"
                app:srcCompat="@drawable/question_mark"
                style="@style/images" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</layout>